Update to latest version (#5)
* Changing the Description of Integrity Threats

* Making LaTeX Markup more structured. Minor text fixing

* Formatting LaTeX pt.2. Minor content fixing (definitions, etc)

* Adjusting makefile

* Adjusted Dockerfile

* Theory fix

* Minor fixes

* Fixed references
Wrote 4.1.3
Developed 4.1.5

* Developed 4.3.3

* Fix bibliography and images

---------

Co-authored-by: uf00led <dmitriimail8@gmail.com>
Co-authored-by: ZuxiGIT <56086534+ZuxiGIT@users.noreply.github.com>
Co-authored-by: ZuxiGIT <shim.01@mail.ru>
Co-authored-by: dagapp <dnagapitov@gmail.com>
Co-authored-by: schneider001 <platov.va@phystech.edu>
Co-authored-by: schneider001 <69435543+schneider001@users.noreply.github.com>

--- a/part/basis/criteria.tex
+++ b/part/basis/criteria.tex
@@ -2,39 +2,44 @@
 
 \subsubsection{Критерии оценки надежных компьютерных систем (TCSEC)}
 <<Критерии безопасности компьютерных систем>> (Trusted Computer System Evaluation Criteria),
-получившие неформальное название <<Оранжевая книга>>, были разработаны Министерством обороны
+получившие неформальное название <<Оранжевая книга>> \cite{OrangeBook}, были разработаны Министерством обороны
 США в 1983 году с целью определения требований безопасности, предъявляемых к аппаратному,
 программному и специальному обеспечению компьютерных систем и выработки соответствующей
 методологии и технологии анализа степени поддержки политики безопасности в компьютерных
 системах военного назначения. В данном документе были впервые нормативно определены такие
-понятия, как <<политика безопасности>>, <<ядро безопасности>> (ТСВ) и т.д.
+понятия, как <<политика безопасности>>, <<ядро безопасности>>, <<доверительная база вычислений>> (\textit{англ.} The Trusted Computing Base, TCB) и т.д.
 
 Предложенные в этом документе концепции защиты и набор функциональных требований послужили
 основой для формирования всех появившихся впоследствии стандартов безопасности.
 
 В <<Оранжевой книге>> предложены три категории требований безопасности -- политика безопасности,
-аудит и корректность, в рамках которых сформулированы шесть базовых требований безопасности.
+подотчетность и корректность, в рамках которых сформулированы шесть базовых требований безопасности.
 Первые четыре требования направлены непосредственно на обеспечение безопасности информации,
 а два последних -- на качество самих средств защиты.
 
-Рассмотрим эти требования подробнее:
+Рассмотрим эти требования подробнее \cite{OrangeBook}:
 
 \begin{enumerate}
-	\item Политика безопасности
+	\item \textbf{Политика безопасности}
 	\begin{itemize}
-		\item \textbf{Политика безопасности}
-		Система должна поддерживать точно определённую политику безопасности. Возможность осуществления субъектами доступа к объектам должна определяться на основе их идентификации и набора правил управления доступом. Там, где необходимо, должна использоваться политика нормативного управления доступом, позволяющая эффективно реализовать разграничение доступа к категорированной информации (информации, отмеченной грифом секретности — типа <<секретно>>, <<сов. секретно>> и т.д.).
-		\item \textbf{Метки} С объектами должны быть ассоциированы метки безопасности, используемые в качестве атрибутов контроля доступа. Для реализации нормативного управления доступом система должна обеспечивать возможность присваивать каждому объекту метку или набор атрибутов, определяющих  степень конфиденциальности (гриф секретности) объекта и/или режимы доступа к этому объекту.
+		\item \textbf{Политика безопасности}\\
+		В системе должна существовать явная и четко определённая политика безопасности. Возможность предоставления субъектам доступа к объектам должна определяться на основе их идентификации и набора правил управления доступом. Там, где необходимо, должна использоваться политика мандатного управления доступом, позволяющая эффективно реализовать разграничение доступа к информа­ции различного уровня конфиденциальности.
+		\item \textbf{Метки}\\
+		С объектами должны быть ассоциированы метки безопасности, используемые в качестве атрибутов контроля доступа. Для реализации мандатного управления доступом система должна обеспечивать возможность присваивать каждому объекту метку или набор атрибутов, определяющих  степень конфиденциальности (гриф секретности) объекта и/или режимы доступа к этому объекту.
 	\end{itemize}
-	\item Аудит
+	\item \textbf{Подотчетность}
 	\begin{itemize}
-		\item \textbf{Идентификация и аутентификация} Все субъекты должен иметь уникальные идентификаторы. Контроль доступа должен осуществляться на основании результатов идентификации субъекта и объекта доступа, подтверждения подлинности их идентификаторов (аутентификации) и правил разграничения доступа. Данные, используемые для идентификации и аутентификации, должны быть защищены от несанкционированного доступа, модификации и уничтожения и должны быть ассоциированы со всеми активными компонентами компьютерной системы, функционирование которых критично с точки зрения безопасности.
-		\item \textbf{Регистрация и учет} Для определения степени ответственности пользователей за действия в системе, все происходящие в ней события, имеющие значение с точки зрения безопасности, должны отслеживаться и регистрироваться в защищенном протоколе. Система регистрации должна осуществлять анализ общего потока событий и выделять из него только те события, которые оказывают влияние на безопасность для сокращения объема протокола и повышения эффективность его анализа. Протокол событий должен быть надежно защищен от несанкционированного доступа, модификации и уничтожения.
+		\item \textbf{Идентификация и аутентификация}\\
+		Все субъекты должен иметь уникальные идентификаторы. Контроль доступа должен осуществляться на основании результатов идентификации субъекта и объекта доступа, подтверждения подлинности их идентификаторов (аутентификации) и правил разграничения доступа. Данные, используемые для идентификации и аутентификации, должны быть защищены от несанкционированного доступа, модификации и уничтожения и должны быть ассоциированы со всеми активными компонентами компьютерной системы, функционирование которых критично с точки зрения безопасности.
+		\item \textbf{Регистрация и учет}\\
+		Для определения степени ответственности пользователей за действия в системе, все происходящие в ней события, имеющие значение с точки зрения безопасности, должны отслеживаться и регистрироваться в защищенном протоколе. Система регистрации должна осуществлять анализ общего потока событий и выделять из него только те события, которые оказывают влияние на безопасность для сокращения объема протокола и повышения эффективность его анализа. Протокол событий должен быть надежно защищен от несанкционированного доступа, модификации и уничтожения.
 	\end{itemize}
-	\item Корректность
+	\item \textbf{Корректность}
 	\begin{itemize}
-		\item \textbf{Контроль корректности} Средства защиты должны содержать независимые аппаратные и~/~или программные компоненты, обеспечивающие работоспособность функций защиты. Это означает, что все средства защиты, обеспечивающие политику безопасности, управление атрибутами и метками безопасности, идентификацию и аутентификацию, регистрацию и учёт, должны находиться под контролем средств, проверяющих корректность их функционирования. Основной принцип контроля корректности состоит в том, что средства контроля должны быть полностью независимы от средств защиты.
-		\item \textbf{Непрерывность защиты} Все средства защиты (в т.ч. и реализующие данное требование) должны быть защищены от несанкционированного вмешательства и/или отключения, причем эта защита должна быть постоянной и непрерывной в любом режиме функционирования системы защиты и компьютерной системы в целом. Данное требование распространяется на весь жизненный цикл компьютерной системы. Кроме того, его выполнение является одним из ключевых аспектов формального доказательства безопасности системы.
+		\item \textbf{Контроль корректности}\\
+		Средства защиты должны содержать независимые аппаратные и/или программные компоненты, обеспечивающие работоспособность функций защиты. Это означает, что все средства защиты, обеспечивающие политику безопасности, управление атрибутами и метками безопасности, идентификацию и аутентификацию, регистрацию и учёт, должны находиться под контролем средств, проверяющих корректность их функционирования. Основной принцип контроля корректности состоит в том, что средства контроля должны быть полностью независимы от средств защиты.
+		\item \textbf{Непрерывность защиты}\\
+		Все средства защиты (в т.ч. и реализующие данное требование) должны быть защищены от несанкционированного вмешательства и/или отключения, причем эта защита должна быть постоянной и непрерывной в любом режиме функционирования системы защиты и компьютерной системы в целом. Данное требование распространяется на весь жизненный цикл компьютерной системы. Кроме того, его выполнение является одним из ключевых аспектов формального доказательства безопасности системы.
 	\end{itemize}
 \end{enumerate}
 
@@ -51,16 +56,51 @@
 
 Так, в <<Оранжевой книге>> использование только дискреционного разделения доступа относит компьютерную систему к одному из классов безопасности группы <<C>>, тогда как добавление мандатного контроля доступа позволяет претендовать на более высокий класс защищенности группы <<B>>. Причем <<Оранжевой книгой>> подразумевается именно добавление мандатной политики безопасности (МПБ) с сохранением возможностей дискреционной политики безопасности (ДПБ).
 
-В качестве еще одного примера совмещения политик безопасности можно привести системы управления базами данных, функционирующие на базе операционных систем семейства Windows. В системах управления базами данных наиболее распространенной является ролевая политика безопасности, но при этом данные хранятся в файлах, доступ к которым разграничивается операционной системой. В операционных системах базовой является ДПБ, но при этом реализуется на определенном уровне МПБ. Таким образом, требуется сопряжение трех различных политик безопасности.
+В качестве еще одного примера совмещения политик безопасности можно привести системы управления базами данных, функционирующие на базе операционных систем семейства Windows. В системах управления базами данных наиболее распространенной является ролевая политика безопасности, но при этом данные хранятся в файлах, доступ к которым разграничивается операционной системой. В операционных системах базовой является ДПБ, но при этом реализуется на определенном уровне МПБ. Таким образом, требуется сопряжение трех различных политик безопасности. \cite{CombinedSecurityPolicies}
 
 \subsubsection{Интерпретация TCSEC для надежных СУБД (TDI)}
-В дополнение к <<Оранжевой книге>> TCSEC, регламентирующей вопросы обеспечения безопасности в ОС, существуют аналогичный документ Национального центра компьютерной безопасности США для СУБД -- TDI, (<<Пурпурная книга >>).
+В дополнение к <<Оранжевой книге>> TCSEC, регламентирующей вопросы обеспечения безопасности в компьютерных системах, существуют аналогичный документ Национального центра компьютерной безопасности США для СУБД -- Trusted Database Management System Interpretation (TDI),-- так называемая <<Пурпурная книга >> \cite{PurpleBook}.
+В ней приведены интерпретации требований TSEC применительно к СУБД.
+
+Рассмотрим эти интерпретации подробнее \cite{PurpleBook}:
+\begin{enumerate}
+	\item \textbf{Политика безопасности}
+	\begin{itemize}
+		\item \textbf{Дискреционный контроль доступа}\\
+		Требование для дискреционного контроля доступа не изменяется в данном документе и применяется так, как указано в TSEC.
+		\item \textbf{Повторное использование объекта}\\
+		Требование для повторного использования объекта не изменяется в данном документе и применяется так, как указано в TSEC.
+		\item \textbf{Метки}\\
+		Требования к меткам в TSEC полностью применимы и к СУБД. Основное различие между требованиями TSEC к меткам, применяемым к ОС и СУБД, заключается в том, какие объекты хранения помечены, а не как обрабатываются эти метки.
+		Начиная с класса B1, СУБД должны связывать метки со всеми объектами хранения, находящимися под их контролем. Степень детализации защищаемых объектов хранения определяется разработчиком СУБД.
+		\item \textbf{Мандатный контроль доступа}\\
+		Требование для мандатного контроля доступа не изменяется в данном документе и применяется так, как указано в TSEC. Однако у этого требования есть несколько тонких последствий, о которых разработчику следует знать. Более подробно можно узнать в \cite{PurpleBook} Appendix B, item 8.
+	\end{itemize}
+	\item \textbf{Подотчетность}
+	\begin{itemize}
+		\item \textbf{Идентификация и аутентификация}\\
+		Требование для идентификации и аутентификации не изменяется в данном документе и применяется так, как указано в TSEC.
+		\item \textbf{Аудит}\\
+		Требования к аудиту в TSEC применяются также и к СУБД. TCB должен быть способен вести аудит доступов и попыток доступа к объектам, находящимся под защитой мандатной и дискреционной политик безопасности.
+		% -------------------------------------------------
+		% TODO: fill out the list according to the Purple Book
+		% also check https://www.jetinfo.ru/informaczionnaya-bezopasnost-obzor-osnovnyh-polozhenij-chast-1/
+		% and https://dorlov.blogspot.com/2010/01/issp-03-8.html
+		% -------------------------------------------------
+	\end{itemize}
+\end{enumerate}
 
 \subsubsection{Оценка надежности СУБД как компоненты вычислительной системы}
+    % Seems to be Appendix B from \cite{PurpleBook}
 \subsubsection{Монитор ссылок}
-Контроль за выполнением субъектами (пользователями) определённых операций над объектами, путем проверки допустимости обращения (данного пользователя) к программам и данным разрешенному набору действий.
+Монитор обращений (reference monitor) – это абстрактная машина, являющаяся посредником, через которого проходят все обращения субъектов к объектам. Монитор обращений проверяет, что субъекты имеют необходимые права доступа, защищая объекты от несанкционированного доступа и изменения.
+Чтобы система достигла высокого уровня доверия, необходимо, чтобы субъекты (программы, пользователи и процессы) были полностью авторизованы перед их доступом к объектам (файлам, программам и ресурсам).
+Субъекту не должно быть позволено использовать запрошенный ресурс, пока ему не будут предоставлены соответствующие привилегии доступа. Монитор обращений – это концепция управления доступом, а не реальный физический компонент, поэтому его часто называют «концепцией монитора обращений» или «абстрактной машиной». \cite{CISSP}
 
-Обязательные качества для монитора обращений:
+Ядро безопасности (security kernel) состоит из компонентов аппаратного обеспечения, программного обеспечения и прошивок, попадающих в рамки ТСВ и реализующих концепцию монитора обращений.
+Ядро безопасности осуществляет посредничество при доступе и работе субъектов с объектами. Ядро безопасности – это ядро ТСВ, это наиболее часто используемый подход к построению доверенных компьютерных систем (trusted computing system). \cite{CISSP}
+
+Есть три основных требования к ядру безопасности:
 \begin{itemize}
 	\item Изолированность (неотслеживаемость работы)
 	\item Полнота (невозможность обойти)
@@ -68,14 +108,16 @@
 \end{itemize}
 
 \subsubsection{Применение TCSEC к СУБД непосредственно}
-
+%
+%	what????????
+%
 \subsubsection{Элементы СУБД, к которым применяются TDI: метки, аудит, архитектура системы, спецификация, верификация, проектная документация}
 
-\href{https://web.archive.org/web/20160303230445/http://ftp.fas.org/irp/nsa/rainbow/tg021.htm}{Пурпурная книга}
+\cite{PurpleBook} IR-3 -- IR-6
 
 \subsubsection{Критерии безопасности ГТК/ФСТЭК}
 
-Некоторое время ФСТЭК (в прошлом ГТК, до 2004 г.) использовал критерии безопасности баз данных, заданные документом <<Безопасность информационных технологий. Критерии оценки безопасности информационных технологий>> от 19.06.02 г. № 187. Этот документ был разработан в ГТК и сейчас выведен из употребления.
+Некоторое время ФСТЭК (в прошлом ГТК, до 2004 г.) использовал критерии безопасности баз данных, заданные документом <<Безопасность информационных технологий. Критерии оценки безопасности информационных технологий>> от 19.06.02 г. № 187. Этот документ был разработан в ГТК и сейчас выведен из употребления. \cite{GTKFSTEK}
 
 Однако, в настоящее время (на 2023 год), ФСТЭК работает по еще более старому документу, которым заменили более новый. Не ищите тут логику. Называется он так:
 <<Средства вычислительной техники. Защита от несанкционированного доступа к информации. Показатели защищенности от несанкционированного доступа к информации>>, утвержденного решением Государственной технической комиссии при Президенте Российской Федерации от 30 марта 1992 г.
@@ -214,12 +256,3 @@ Le meme в том, что первый документ на сайте ФСТЭ
 \end{itemize}
 
 Вот так, как-то. Добро пожаловать в увлекательный мир нормативно-правовой документации в области защиты информации.
-
-
-
-
-
-
-
-
-
