--- a/preamble.tex
+++ b/preamble.tex
@@ -31,7 +31,7 @@
 \usepackage[usenames,dvipsnames,svgnames,table,rgb]{xcolor}
 \definecolor{linkcolor}{HTML}{799B03} % цвет ссылок
 \definecolor{urlcolor}{HTML}{799B03} % цвет гиперссылок
- 
+
 \hypersetup{%
     pdfstartview=FitH,%
     linkcolor=blue,%
@@ -65,12 +65,12 @@
 
 \usepackage{csquotes} % Инструменты для ссылок
 
-\usepackage[backend=biber,bibencoding=utf8,sorting=ynt,maxcitenames=2,style=authoryear,autocite=inline]{biblatex}
+\usepackage[backend=biber,bibencoding=utf8,sorting=ynt,maxcitenames=2,style=numeric,autocite=inline]{biblatex}
 
 \usepackage[most]{tcolorbox} % для управления цветом
 \definecolor{block-gray}{gray}{0.90} % уровень прозрачности (1 - максимум)
 \newtcolorbox{grayquote}{colback=block-gray,grow to right by=-10mm,grow to left by=-10mm, boxrule=0pt,boxsep=0pt,breakable} % настройки области с изменённым фоном
 
-\usepackage[normalem]{ulem} 
+\usepackage[normalem]{ulem}
 
 \usepackage{import} % Импорт из вложенных файлов
